syntax = "proto3";

package api.operate;

option go_package = "content_manage/api/operate;operate";
option java_multiple_files = true;
option java_package = "api.operate";

service App {
	// 创建内容
	rpc CreateContent (CreateContentReq) returns (CreateContentRsp);
	// 更新内容
	rpc UpdateContent (UpdateContentReq) returns (UpdateContentRsp);
	// 删除内容
	rpc DeleteContent (DeleteContentReq) returns (DeleteContentRsp);
	// 内容查找
	rpc FindContent (FindContentReq) returns (FindContentRsp);
}

message Content {
	// 内容id
	int64 id = 1;
	// 内容标题
	string title = 2;
	// 视频播放URL
	string video_url = 3;
	// 内容作者
	string author = 4;
	// 内容描述
	string description = 5;
	// 缩略图
	string thumbnail = 6;
	// 内容分类
	string category = 7;
	// 时长
	int64 duration = 8;
	// 分辨率
	string resolution = 9;
	// 文件大小
	int64 file_size = 10;
	// 文件格式
	string format = 11;
	// 视频质量
	int32 quality = 12;
	// 审核状态
	int32 approval_status = 13;
}

message CreateContentReq {
	// 内容
	Content content = 1;
}
message CreateContentRsp {}

message UpdateContentReq {
	// 内容
	Content content = 2;
}
message UpdateContentRsp {}

message DeleteContentReq {
	int64 id = 1;
}
message DeleteContentRsp {}

message FindContentReq {
	int64 id = 1;
	string author = 2;
	string title = 3;
	int32 page = 4;
	int32 page_size = 5;
}
message FindContentRsp {
	int64 total = 1;
	repeated Content contents = 2;
}